<resources>
    <string name="app_name">STUD</string>
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account? Create One</string>
    <string name="already_member">Already a member? Login</string>
    <string name="register">Register</string>
    <string name="user_id_reg">Username:</string>
    <string name="email_reg">Email:</string>
    <string name="password_reg">Password:</string>
    <string name="confirm_password_reg">Confirm Password:</string>

    <string name="error_message_username">Enter valid username</string>
    <string name="error_message_email">Enter valid email</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration successful</string>
    <string name="text_already_member">Already have an account?</string>
    <string name="error_email_exists">Email already exists</string>
    <string name="error_password_match">Password does not match</string>
    <string name="error_valid_email_password">Wrong username or password</string>


    <string name="no_cardetails">Click on the button below to begin creating your reminder!</string>
    <string name="title_activity_add_reminder">Add Reminder</string>
    <string name="title_activity_edit_reminder">Edit Reminder</string>
    <string name="title_activity_licenses">Licenses</string>

    <string name="add_reminder">Reminder</string>
    <string name="details">Details</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="repeat">Repeat</string>
    <string name="repeat_off">Off</string>
    <string name="repeat_no">Repetition Interval </string>
    <string name="repeat_type">Type of Repetitions</string>

    <string name="action_discard_reminder">Discard Reminder</string>
    <string name="action_save_reminder">Save Reminder</string>

    <string name="editor_activity_title_new_reminder">Add Reminder Details</string>
    <string name="editor_activity_title_edit_reminder">Edit Reminder</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>
    <string name="delete_dialog_msg">Delete this Reminder?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    <string name="editor_delete_reminder_successful">Reminder deleted</string>

    <string name="editor_delete_reminder_failed">Error with deleting reminder</string>

    <string name="editor_insert_reminder_successful">Reminder saved</string>

    <string name="editor_insert_reminder_failed">Error with saving reminder</string>

    <string name="editor_update_reminder_successful">Reminder updated</string>

    <string name="editor_update_reminder_failed">Error with updating reminder</string>

    <string name="reminder_title">AlarmReminder</string>
</resources>
